// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/ActivityFeed/task-new/TaskStatus should render the correct task status APPROVED 1`] = `
<Memo()
  status="APPROVED"
>
  <FormattedMessage
    defaultMessage="{taskStatus}"
    id="be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel"
    values={
      Object {
        "taskStatus": <LabelPill
          type="success"
        >
          <span>
            <FormattedMessage
              defaultMessage="APPROVED"
              id="be.contentSidebar.activityFeed.taskNew.tasksFeedApprovedUppercaseLabel"
            />
          </span>
        </LabelPill>,
      }
    }
  >
    <div />
  </FormattedMessage>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/TaskStatus should render the correct task status COMPLETED 1`] = `
<Memo()
  status="COMPLETED"
>
  <FormattedMessage
    defaultMessage="{taskStatus}"
    id="be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel"
    values={
      Object {
        "taskStatus": <LabelPill
          type="success"
        >
          <span>
            <FormattedMessage
              defaultMessage="COMPLETED"
              id="be.contentSidebar.activityFeed.taskNew.tasksFeedCompletedUppercaseLabel"
            />
          </span>
        </LabelPill>,
      }
    }
  >
    <div />
  </FormattedMessage>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/TaskStatus should render the correct task status IN_PROGRESS 1`] = `
<Memo()
  status="IN_PROGRESS"
>
  <FormattedMessage
    defaultMessage="{taskStatus}"
    id="be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel"
    values={
      Object {
        "taskStatus": <LabelPill
          type="default"
        >
          <span>
            <FormattedMessage
              defaultMessage="IN PROGRESS"
              id="be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressUppercaseLabel"
            />
          </span>
        </LabelPill>,
      }
    }
  >
    <div />
  </FormattedMessage>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/TaskStatus should render the correct task status NOT_STARTED 1`] = `
<Memo()
  status="NOT_STARTED"
>
  <FormattedMessage
    defaultMessage="{taskStatus}"
    id="be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel"
    values={
      Object {
        "taskStatus": <LabelPill
          type="default"
        >
          <span>
            <FormattedMessage
              defaultMessage="IN PROGRESS"
              id="be.contentSidebar.activityFeed.taskNew.tasksFeedInProgressUppercaseLabel"
            />
          </span>
        </LabelPill>,
      }
    }
  >
    <div />
  </FormattedMessage>
</Memo()>
`;

exports[`elements/content-sidebar/ActivityFeed/task-new/TaskStatus should render the correct task status REJECTED 1`] = `
<Memo()
  status="REJECTED"
>
  <FormattedMessage
    defaultMessage="{taskStatus}"
    id="be.contentSidebar.activityFeed.taskNew.tasksFeedStatusLabel"
    values={
      Object {
        "taskStatus": <LabelPill
          type="error"
        >
          <span>
            <FormattedMessage
              defaultMessage="REJECTED"
              id="be.contentSidebar.activityFeed.taskNew.tasksFeedRejectedUppercaseLabel"
            />
          </span>
        </LabelPill>,
      }
    }
  >
    <div />
  </FormattedMessage>
</Memo()>
`;
